--- a/index.html
+++ b/index.html
@@ -78,22 +78,22 @@
             <h2 class="team-title">Наша команда</h2>
             <ul class="team-list">
                 <li>
-                    <img src="/images/image-4.jpg" alt="Дизайнер" width="270" height="260">
+                    <img src="./images/image-4.jpg" alt="Дизайнер" width="270" height="260">
                     <h3 class="team-name-title">Игорь Демьяненко</h3>
                     <p lang="en" class="team-text">Product Designer</p>
                 </li>
                 <li>
-                    <img src="/images/image-5.jpg" alt="Разработчик" width="270" height="260">
+                    <img src="./images/image-5.jpg" alt="Разработчик" width="270" height="260">
                     <h3 class="team-name-title">Ольга Репина</h3>
                     <p lang="en" class="team-text">Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="/images/image-6.jpg" alt="Маркетолог" width="270" height="260">
+                    <img src="./images/image-6.jpg" alt="Маркетолог" width="270" height="260">
                     <h3 class="team-name-title">Николай Тарасов</h3>
                     <p lang="en" class="team-text">Marketing</p>
                 </li>
                 <li>
-                    <img src="/images/image-7.jpg" alt="Дизайнер" width="270" height="260">
+                    <img src="./images/image-7.jpg" alt="Дизайнер" width="270" height="260">
                     <h3 class="team-name-title">Михаил Ермаков</h3>
                     <p lang="en" class="team-text">UI Designer</p>
                 </li>
