--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 <body>
     <!--Шапка сайта-->
     <header class="section-header">
-        <a href="" lang="en" class="logo"><span class="logo-web">Web</span>Studio</a>
+        <a href="./index.html" lang="en" class="logo"><span class="logo-web">Web</span>Studio</a>
         <nav>
             <ul class="header-list">
                 <li> <a class="header-link" href="./studio.html">Студия</a></li>
@@ -30,17 +30,17 @@
     </header>
     <!--Мейн сайта-->
     <main>
-        <!--Фильтр-->
-        <ul class="btm-list">
-            <li><button type="button" class="btm-item">Все</button></li>
-            <li><button type="button" class="btm-item">Веб-сайты</button></li>
-            <li><button type="button" class="btm-item">Приложения</button></li>
-            <li><button type="button" class="btm-item">Дизайн</button></li>
-            <li><button type="button" class="btm-item">Маркетинг</button></li>
-        </ul>
-
+        
         <!--Cписок проектов-->
+
         <section class="section-text">
+            <ul class="btm-list">
+                <li><button type="button" class="btm-item">Все</button></li>
+                <li><button type="button" class="btm-item">Веб-сайты</button></li>
+                <li><button type="button" class="btm-item">Приложения</button></li>
+                <li><button type="button" class="btm-item">Дизайн</button></li>
+                <li><button type="button" class="btm-item">Маркетинг</button></li>
+            </ul>
             <h1 class="visually-hidden">Список проектов</h1>
             <ul class="project-list">
                 <li>
@@ -92,7 +92,7 @@
     </main>
     <!--Футер-->
     <footer class="footer">
-        <a href="" lang="en" class="footer-logo"><span class="footer-logo-web">Web</span>Studio</a>
+        <a href="./index.html" lang="en" class="footer-logo"><span class="footer-logo-web">Web</span>Studio</a>
         <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
         <ul class="footer-list">
             <li><a class="footer-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
