--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
     <!--Мейн сайта-->
     <main>
         
-        <!--Cписок проектов-->
+        <!--Cписок проектов.-->
 
         <section class="section-text">
             <ul class="btm-list">
